--- a/1.html
+++ b/1.html
@@ -1,28 +1,85 @@
 <!doctype html>
 <html>
 <head>
-<title>Web Developer Study - Main</title>
-<meta charset="utf-8">
+  <title>Web Developer Study - Main</title>
+  <meta charset="utf-8">
+  <style>
+
+    #grid{
+      display: grid;
+      grid-template-columns: 150px 1fr;
+    }
+    a {
+      text-decoration: none;
+      color:black;
+    }
+
+    #grid #article{
+      padding-left: 25px;
+
+    }
+
+    #active{color:red;}
+
+    .saw{color:gray;}
+
+    h1 {
+      font-size: 500%;
+      text-align: center;
+      border-bottom:1px solid grey;
+      margin: 0;
+      padding: 20px;
+    }
+
+    #grid ol {
+      border-right: 1px solid grey;
+      width:100px;
+      margin: 0;
+      padding:20px;
+      padding-left:33px;
+    }
+    body {
+      margin: 0;
+    }
+
+    h2{
+      margin-top: 15px;
+    }
+  </style>
 </head>
 
 <body>
   <h1><a href="1.html">WEB</a></h1>
-<ol>
-  <strong>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
-  </strong>
-</ol>
+  <div id="grid">
+  <ol>
+    <strong>
+      <li><a href="1.html" class="saw">HTML</a></li>
+      <li><a href="2.html" class="saw" id="active">CSS</a></li>
+      <li><a href="3.html">JavaScript</a></li>
+    </strong>
+  </ol>
 
-<h2>Web Developer로써의 길</h2>
+<!--
+  <h1><a href="1.html"><font color="red">WEB</font></a></h1>
+  <ol>
+    <strong>
+    <li><a href="1.html"><font color="red">HTML</font></a></li>
+    <li><a href="2.html"><font color="red">CSS</font></a></li>
+    <li><a href="3.html"><font color="red">JavaScript</font></a></li>
+    </strong>
+  </ol>
+-->
+  <div id="article">
+  <h2>Web Developer로써의 길</h2>
 
-<p><strong>front-end to back-end, <u>full stack</u></strong></p>
+  <p><strong>front-end to back-end, <u>full stack</u></strong></p>
 
-<p><a href="https://www.w3.org/TR/html51/" target="_blank" title="HTML5 Specification">HTML Specification</a></p>
+  <p><a href="https://www.w3.org/TR/html51/" target="_blank" title="HTML5 Specification">HTML Specification</a></p>
+</div>
+</div>
 
-<img src="7648.png" width="70%">
+  <img src="7648.png" width="50%">
 
-<p style="margin-top:30px;">made by HHW, Tommas</p>
+  <p style="margin-top:30px;">made by HHW, Tommas</p>
 </body>
 </html>
